Code refactor and cleanup

--- a/Corine/histogram.ipynb
+++ b/Corine/histogram.ipynb
@@ -22,8 +22,7 @@
    "outputs": [],
    "source": [
     "count = np.zeros(14)\n",
-    "#root = '...'\n",
-    "#root = '...'\n",
+    "root = '...'\n",
     "\n",
     "i = 0\n",
     "for image in os.listdir(root): \n",
@@ -33,14 +32,12 @@
     "        label = np.load(x)\n",
     "\n",
     "        hist, bins = np.histogram(label.ravel(),14,[0,13], density=True)\n",
-    "        count += hist\n",
-    "        \n",
-    "count = count / i"
+    "        count += hist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "eleven-treat",
    "metadata": {},
    "outputs": [
@@ -70,9 +67,7 @@
     "plt.figure(figsize = (8,5))\n",
     "plt.title(\"Train set class distribution\")\n",
     "plt.xticks(rotation=80)\n",
-    "plt.bar(classes, count);\n",
-    "\n",
-    "plt.savefig('./memoria/distribucio_rs.png')\n"
+    "plt.bar(classes, count);"
    ]
   },
   {
@@ -208,13 +203,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "consecutive-import",
    "metadata": {},
    "outputs": [],
    "source": [
     "count = np.zeros(14)\n",
-    "root = '/home/usuaris/imatge/manel.davins/Corine/data/val_labels'\n",
+    "root = '...'\n",
     "\n",
     "i = 0\n",
     "for image in os.listdir(root): \n",
@@ -224,9 +219,7 @@
     "        label = np.load(x)\n",
     "\n",
     "        hist, bins = np.histogram(label.ravel(),14,[0,13], density=False)\n",
-    "        count += hist\n",
-    "        \n",
-    "#count = count / i"
+    "        count += hist"
    ]
   },
   {
